# giraffe-toolkit

./: .gitignore  README.md  meson.build  meson_options.txt  uncrustify-elementary-vala.cfg
include/: giraffe.pc
src/: bar.vala  chart.vala  example.vala  generate_typelib.build  giraffe.vala  graph_viewer.vala  line.vala  meson.build  pie.vala  scatter.vala
src/examples/example/: example.vala  meson.build
