project('giraffe example','vala','c')

glib_dep = dependency('glib-2.0')
gobject_dep = dependency('gobject-2.0')
giraffe_dep = dependency('giraffe4')
gtk_dep = dependency('gtk4')
gee_dep = dependency('gee-0.8')

executable('example', 'example.vala', dependencies: [glib_dep,gobject_dep,giraffe_dep,gtk_dep,gee_dep])
